新增用户编辑和删除功能.

--- a/app01/templates/user_list.html
+++ b/app01/templates/user_list.html
@@ -51,8 +51,8 @@
                             <td>{{ obj.depart.title }}</td>
                             <td>
                                 <a class="btn btn-primary btn-xs" style="margin-right: 10px"
-                                   href="/user/edit">编辑</a>
-                                <a class="btn btn-danger btn-xs" href="/user/list">删除</a>
+                                   href="/user/{{ obj.id }}/edit/">编辑</a>
+                                <a class="btn btn-danger btn-xs" href="/user/{{ obj.id }}/delete/">删除</a>
                             </td>
 
                         </tr>
