--- a/app01/templates/user_edit.html
+++ b/app01/templates/user_edit.html
@@ -5,50 +5,18 @@
         <div class="container">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">新建用户</h3>
+                    <h3 class="panel-title">编辑用户</h3>
                 </div>
                 <div class="panel-body">
-                    <form method="post">
+                    <form method="post" novalidate>
                         {% csrf_token %} {# post方式,需要加这行 #}
-                        <div class="form-group">
-                            <label>姓名</label>
-                            <input type="text" class="form-control" placeholder="用户名称" name="name"
-                                   value="{{ user_info.name }}"/>
-                        </div>
-                        <div class="form-group">
-                            <label>密码</label>
-                            <input type="text" class="form-control" placeholder="用户密码" name="password"/>
-                        </div>
-                        <div class="form-group">
-                            <label>性别</label>
-                            {#<input type="number" class="form-control" placeholder="gender" name="gender"/>#}
-                            <select class="form-control" name="gender">
-                                {% for item in gender_choices %}
-                                    <option value="{{ item.0 }}">{{ item.1 }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>余额</label>
-                            <input type="text" class="form-control" placeholder="account" name="account"/>
-                        </div>
-                        <div class="form-group">
-                            <label>入职时间</label>
-                            <input type="date" class="form-control" placeholder="create_time" name="create_time"/>
-                        </div>
-                        <div class="form-group">
-                            <label>部门</label>
-                            {#                            <input type="text" class="form-control" placeholder="depart" name="depart"/>#}
-                            <select class="form-control" name="department">
-                                {% for item in depart_list %}
-                                    <option value="{{ item.id }}">{{ item.title }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>年龄</label>
-                            <input type="number" class="form-control" placeholder="age" name="age"/>
-                        </div>
+                        {% for field in form %}
+                            <div class="form-group">
+                                <label>{{ field.label }}</label>
+                                {{ field }}
+                                <span style="color:red;">{{ field.errors.0 }}</span> {# 这是一个错误列表 [错误1,错误2...] #}
+                            </div>
+                        {% endfor %}
                         <button type="submit" class="btn btn-primary">保 存</button>
                     </form>
                 </div>
