--- a/app01/templates/user_list.html
+++ b/app01/templates/user_list.html
@@ -39,7 +39,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for obj in object %}
+                    {% for obj in queryset %}
                         <tr>
                             <th scope="row">{{ obj.id }}</th>
                             <td>{{ obj.name }}</td>
@@ -60,7 +60,11 @@
                     </tbody>
                 </table>
             </div>
+            <ul class="pagination">
+                {{ page_string }}
+            </ul>
         </div>
+
 
     </div>
 {% endblock %}
