--- a/app01/templates/layout.html
+++ b/app01/templates/layout.html
@@ -10,6 +10,9 @@
             border-radius: 0;
         }
     </style>
+    {% block css %}
+    
+    {% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -63,5 +66,8 @@
 
 <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'plugins/bootstrap-3.4.1/js/bootstrap.min.js' %}"></script>
+{% block js %}
+
+{% endblock %}
 </body>
 </html>
