--- a/app01/templates/error_page.html
+++ b/app01/templates/error_page.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
     <div class="container">
-        <h3>{{ error_msg }}</h3>
+        <h3>{{ error_title }}</h3>
         <div class="alert alert-danger" role="alert">
             <strong>警告:</strong> <a href="#" class="alert-link">{{ error_msg }}</a> 请尝试重新操作.
         </div>
