--- a/app01/templates/layout.html
+++ b/app01/templates/layout.html
@@ -1,3 +1,4 @@
+{# 这是一个模板文件 #}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +12,7 @@
         }
     </style>
     {% block css %}
-    
+
     {% endblock %}
 </head>
 <body>
@@ -39,14 +40,14 @@
                 <li><a href="/pretty/list">靓号管理</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登录</a></li>
+{#                <li><a href="#">登录</a></li>#}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">罗小波<span class="caret"></span></a>
+                       aria-expanded="false">{{ request.session.info.name }}<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">我的信息</a></li>
-                        <li><a href="#">注销</a></li>
+                        <li><a href="/logout/">注销</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
                     </ul>
