--- a/app01/templates/login.html
+++ b/app01/templates/login.html
@@ -49,7 +49,7 @@
                     <span style="color:red;"></span>
                 </div>
                 <div class="col-xs-5">
-                    <img id="image_code" src="{% static 'img/code.jpg' %}" style="width: 125px;">  <!-- 在这里放入验证码的图片地址 -->
+                    <img id="image_code" src="/image/code/" style="width: 125px;">  <!-- 在这里放入验证码的图片地址 -->
                 </div>
             </div>
 
