--- a/app01/templates/task_list.html
+++ b/app01/templates/task_list.html
@@ -9,7 +9,7 @@
                     <div class="clearfix">  {# 用这个来控制,组件可以撑起父级,不至于变形 #}
                         {% for field in form %}  {# 循环获取字段 #}
                             <div class="col-xs-6">  {# 栅格,用这个来控制输入框的长度. #}
-                                <div class="form-group" style="position: relative">
+                                <div class="form-group" style="position: relative;margin-bottom: 20px;">
                                     <label>
                                         {{ field.label }} {# 标题名称 #}
                                     </label>
@@ -58,7 +58,8 @@
                             } else {
                                 alert("任务创建失败，请检查输入的信息。")
                                 $.each(res.error, function (name, data) {
-                                    console.log(name, data)
+                                    console.log(name, data);
+                                    $("#id_" + name).next().text(data[0])  {# 对应字段的下一个文本数组的首个. #}
                                 })
                             }
 
